--- a/qt/domanic_dialog.ui
+++ b/qt/domanic_dialog.ui
@@ -4174,14 +4174,17 @@ selection-color: rgb(85, 0, 0);</string>
                 </widget>
                </item>
                <item row="5" column="1">
-                <widget class="QPushButton" name="pushButton_del_param_2">
+                <widget class="QPushButton" name="pushButton_mean_las">
                  <property name="font">
                   <font>
                    <pointsize>10</pointsize>
                   </font>
                  </property>
+                 <property name="styleSheet">
+                  <string notr="true">background-color: rgb(255, 255, 222);</string>
+                 </property>
                  <property name="text">
-                  <string/>
+                  <string>MEAN</string>
                  </property>
                 </widget>
                </item>
