--- a/qt/domanic_dialog.ui
+++ b/qt/domanic_dialog.ui
@@ -1988,8 +1988,8 @@ selection-color: rgb(85, 0, 0);</string>
                          <rect>
                           <x>0</x>
                           <y>0</y>
-                          <width>98</width>
-                          <height>38</height>
+                          <width>424</width>
+                          <height>272</height>
                          </rect>
                         </property>
                         <layout class="QGridLayout" name="gridLayout_75">
@@ -3461,6 +3461,312 @@ selection-color: rgb(85, 0, 0);</string>
                  </item>
                 </layout>
                </widget>
+               <widget class="QWidget" name="tab_8">
+                <attribute name="title">
+                 <string>8</string>
+                </attribute>
+                <attribute name="toolTip">
+                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Привязка образцов&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                </attribute>
+                <layout class="QGridLayout" name="gridLayout_114">
+                 <item row="0" column="0">
+                  <widget class="QGroupBox" name="groupBox_5">
+                   <property name="title">
+                    <string>Linking Sample</string>
+                   </property>
+                   <layout class="QGridLayout" name="gridLayout_117" rowstretch="5,2">
+                    <item row="0" column="0">
+                     <layout class="QGridLayout" name="gridLayout_116" rowstretch="0,0">
+                      <item row="0" column="0">
+                       <layout class="QGridLayout" name="gridLayout_111">
+                        <item row="0" column="0">
+                         <widget class="QComboBox" name="comboBox_linking"/>
+                        </item>
+                        <item row="0" column="1">
+                         <widget class="QToolButton" name="toolButton_add_linking">
+                          <property name="minimumSize">
+                           <size>
+                            <width>24</width>
+                            <height>24</height>
+                           </size>
+                          </property>
+                          <property name="styleSheet">
+                           <string notr="true">background-color: rgb(191, 255, 191);</string>
+                          </property>
+                          <property name="text">
+                           <string>+</string>
+                          </property>
+                         </widget>
+                        </item>
+                        <item row="0" column="2">
+                         <widget class="QToolButton" name="toolButton_rem_linking">
+                          <property name="minimumSize">
+                           <size>
+                            <width>24</width>
+                            <height>24</height>
+                           </size>
+                          </property>
+                          <property name="styleSheet">
+                           <string notr="true">background-color: rgb(255, 185, 185);</string>
+                          </property>
+                          <property name="text">
+                           <string>-</string>
+                          </property>
+                         </widget>
+                        </item>
+                       </layout>
+                      </item>
+                      <item row="1" column="0">
+                       <layout class="QGridLayout" name="gridLayout_115" columnstretch="4,0">
+                        <item row="0" column="0">
+                         <layout class="QGridLayout" name="gridLayout_112">
+                          <item row="0" column="0">
+                           <layout class="QGridLayout" name="gridLayout_109">
+                            <item row="0" column="0">
+                             <widget class="QLabel" name="label_40">
+                              <property name="text">
+                               <string>Linking:</string>
+                              </property>
+                             </widget>
+                            </item>
+                            <item row="1" column="0">
+                             <widget class="QListWidget" name="listWidget_trying"/>
+                            </item>
+                           </layout>
+                          </item>
+                          <item row="1" column="0">
+                           <layout class="QGridLayout" name="gridLayout_110">
+                            <item row="0" column="0">
+                             <widget class="QLabel" name="label_41">
+                              <property name="text">
+                               <string>Sample:</string>
+                              </property>
+                             </widget>
+                            </item>
+                            <item row="1" column="0">
+                             <widget class="QListWidget" name="listWidget_sample"/>
+                            </item>
+                           </layout>
+                          </item>
+                         </layout>
+                        </item>
+                        <item row="0" column="1">
+                         <layout class="QGridLayout" name="gridLayout_113">
+                          <item row="1" column="0">
+                           <widget class="QLabel" name="label_36">
+                            <property name="text">
+                             <string>shifts:</string>
+                            </property>
+                            <property name="alignment">
+                             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="2" column="1">
+                           <widget class="QSpinBox" name="spinBox_n_iter_linking">
+                            <property name="minimum">
+                             <number>100</number>
+                            </property>
+                            <property name="maximum">
+                             <number>1000000</number>
+                            </property>
+                            <property name="singleStep">
+                             <number>500</number>
+                            </property>
+                            <property name="value">
+                             <number>10000</number>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="4" column="0">
+                           <widget class="QLabel" name="label_39">
+                            <property name="text">
+                             <string>bin:</string>
+                            </property>
+                            <property name="alignment">
+                             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="5" column="1">
+                           <widget class="QPushButton" name="pushButton_remove_linking">
+                            <property name="styleSheet">
+                             <string notr="true">background-color: rgb(255, 185, 185);</string>
+                            </property>
+                            <property name="text">
+                             <string>remove</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="6" column="0">
+                           <widget class="QPushButton" name="pushButton_skip_sample">
+                            <property name="styleSheet">
+                             <string notr="true">background-color: rgb(208, 188, 249);</string>
+                            </property>
+                            <property name="text">
+                             <string>skip</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="2" column="0">
+                           <widget class="QLabel" name="label_37">
+                            <property name="text">
+                             <string>N iter:</string>
+                            </property>
+                            <property name="alignment">
+                             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="0" column="0">
+                           <widget class="QLabel" name="label_35">
+                            <property name="layoutDirection">
+                             <enum>Qt::LeftToRight</enum>
+                            </property>
+                            <property name="autoFillBackground">
+                             <bool>false</bool>
+                            </property>
+                            <property name="text">
+                             <string>algorithm:</string>
+                            </property>
+                            <property name="alignment">
+                             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="3" column="0">
+                           <widget class="QLabel" name="label_38">
+                            <property name="text">
+                             <string>lim shift:</string>
+                            </property>
+                            <property name="alignment">
+                             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="0" column="1">
+                           <widget class="QComboBox" name="comboBox_opt_algorithm">
+                            <item>
+                             <property name="text">
+                              <string>NSGA-II</string>
+                             </property>
+                            </item>
+                            <item>
+                             <property name="text">
+                              <string>GDE-3</string>
+                             </property>
+                            </item>
+                           </widget>
+                          </item>
+                          <item row="5" column="0">
+                           <widget class="QPushButton" name="pushButton_calc_linking">
+                            <property name="styleSheet">
+                             <string notr="true">background-color: rgb(191, 255, 191);</string>
+                            </property>
+                            <property name="text">
+                             <string>calc</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="6" column="1">
+                           <widget class="QPushButton" name="pushButton_4">
+                            <property name="text">
+                             <string/>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="4" column="1">
+                           <widget class="QSpinBox" name="spinBox_linking_bin">
+                            <property name="minimum">
+                             <number>2</number>
+                            </property>
+                            <property name="maximum">
+                             <number>1000</number>
+                            </property>
+                            <property name="singleStep">
+                             <number>5</number>
+                            </property>
+                            <property name="value">
+                             <number>20</number>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="1" column="1">
+                           <widget class="QComboBox" name="comboBox_shift_method">
+                            <item>
+                             <property name="text">
+                              <string>sum</string>
+                             </property>
+                            </item>
+                            <item>
+                             <property name="text">
+                              <string>mean</string>
+                             </property>
+                            </item>
+                            <item>
+                             <property name="text">
+                              <string>median</string>
+                             </property>
+                            </item>
+                           </widget>
+                          </item>
+                          <item row="3" column="1">
+                           <widget class="QDoubleSpinBox" name="doubleSpinBox_lim_shift">
+                            <property name="decimals">
+                             <number>1</number>
+                            </property>
+                            <property name="minimum">
+                             <double>0.100000000000000</double>
+                            </property>
+                            <property name="maximum">
+                             <double>20.000000000000000</double>
+                            </property>
+                            <property name="singleStep">
+                             <double>0.100000000000000</double>
+                            </property>
+                            <property name="value">
+                             <double>1.000000000000000</double>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="7" column="0">
+                           <widget class="QPushButton" name="pushButton_5">
+                            <property name="text">
+                             <string/>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="7" column="1">
+                           <widget class="QPushButton" name="pushButton_6">
+                            <property name="text">
+                             <string/>
+                            </property>
+                           </widget>
+                          </item>
+                         </layout>
+                        </item>
+                       </layout>
+                      </item>
+                     </layout>
+                    </item>
+                    <item row="1" column="0">
+                     <spacer name="verticalSpacer_8">
+                      <property name="orientation">
+                       <enum>Qt::Vertical</enum>
+                      </property>
+                      <property name="sizeHint" stdset="0">
+                       <size>
+                        <width>20</width>
+                        <height>40</height>
+                       </size>
+                      </property>
+                     </spacer>
+                    </item>
+                   </layout>
+                  </widget>
+                 </item>
+                </layout>
+               </widget>
               </widget>
              </item>
             </layout>
@@ -4364,8 +4670,8 @@ selection-color: rgb(85, 0, 0);</string>
                     <rect>
                      <x>0</x>
                      <y>0</y>
-                     <width>98</width>
-                     <height>88</height>
+                     <width>225</width>
+                     <height>234</height>
                     </rect>
                    </property>
                    <attribute name="label">
@@ -4415,8 +4721,8 @@ selection-color: rgb(85, 0, 0);</string>
                     <rect>
                      <x>0</x>
                      <y>0</y>
-                     <width>98</width>
-                     <height>88</height>
+                     <width>225</width>
+                     <height>234</height>
                     </rect>
                    </property>
                    <attribute name="label">
@@ -4443,7 +4749,7 @@ selection-color: rgb(85, 0, 0);</string>
                     <rect>
                      <x>0</x>
                      <y>0</y>
-                     <width>98</width>
+                     <width>88</width>
                      <height>88</height>
                     </rect>
                    </property>
