--- a/qt/domanic_dialog.ui
+++ b/qt/domanic_dialog.ui
@@ -3533,29 +3533,59 @@ selection-color: rgb(85, 0, 0);</string>
                        <layout class="QGridLayout" name="gridLayout_115" columnstretch="4,0">
                         <item row="0" column="1">
                          <layout class="QGridLayout" name="gridLayout_113">
-                          <item row="2" column="1">
-                           <widget class="QSpinBox" name="spinBox_n_iter_linking">
-                            <property name="minimum">
-                             <number>100</number>
+                          <item row="2" column="0">
+                           <widget class="QLabel" name="label_37">
+                            <property name="text">
+                             <string>N iter:</string>
                             </property>
-                            <property name="maximum">
-                             <number>1000000</number>
-                            </property>
-                            <property name="singleStep">
-                             <number>500</number>
-                            </property>
-                            <property name="value">
-                             <number>10000</number>
+                            <property name="alignment">
+                             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                             </property>
                            </widget>
                           </item>
-                          <item row="6" column="0">
-                           <widget class="QPushButton" name="pushButton_skip_sample">
+                          <item row="8" column="1">
+                           <widget class="QPushButton" name="pushButton_samples_linking">
                             <property name="styleSheet">
-                             <string notr="true">background-color: rgb(208, 188, 249);</string>
+                             <string notr="true">background-color: rgb(191, 255, 191);</string>
                             </property>
                             <property name="text">
-                             <string>skip</string>
+                             <string>samples</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="7" column="1">
+                           <widget class="QPushButton" name="pushButton_cansel_used_linking">
+                            <property name="styleSheet">
+                             <string notr="true">background-color: rgb(255, 185, 185);</string>
+                            </property>
+                            <property name="text">
+                             <string>cansel used</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="0" column="0">
+                           <widget class="QLabel" name="label_35">
+                            <property name="layoutDirection">
+                             <enum>Qt::LeftToRight</enum>
+                            </property>
+                            <property name="autoFillBackground">
+                             <bool>false</bool>
+                            </property>
+                            <property name="text">
+                             <string>algorithm:</string>
+                            </property>
+                            <property name="alignment">
+                             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="6" column="1">
+                           <widget class="QPushButton" name="pushButton_calc_linking">
+                            <property name="styleSheet">
+                             <string notr="true">background-color: rgb(255, 190, 111);</string>
+                            </property>
+                            <property name="text">
+                             <string>calc</string>
                             </property>
                            </widget>
                           </item>
@@ -3573,10 +3603,111 @@ selection-color: rgb(85, 0, 0);</string>
                             </item>
                            </widget>
                           </item>
+                          <item row="4" column="0">
+                           <widget class="QLabel" name="label_39">
+                            <property name="text">
+                             <string>bin:</string>
+                            </property>
+                            <property name="alignment">
+                             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="5" column="0">
+                           <widget class="QPushButton" name="pushButton_add_trying">
+                            <property name="styleSheet">
+                             <string notr="true">background-color: rgb(191, 255, 191);</string>
+                            </property>
+                            <property name="text">
+                             <string>add trying</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="5" column="1">
+                           <widget class="QPushButton" name="pushButton_remove_linking">
+                            <property name="styleSheet">
+                             <string notr="true">background-color: rgb(255, 185, 185);</string>
+                            </property>
+                            <property name="text">
+                             <string>remove</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="1" column="1">
+                           <widget class="QComboBox" name="comboBox_shift_method">
+                            <item>
+                             <property name="text">
+                              <string>sum</string>
+                             </property>
+                            </item>
+                            <item>
+                             <property name="text">
+                              <string>mean</string>
+                             </property>
+                            </item>
+                            <item>
+                             <property name="text">
+                              <string>median</string>
+                             </property>
+                            </item>
+                           </widget>
+                          </item>
+                          <item row="4" column="1">
+                           <widget class="QSpinBox" name="spinBox_linking_bin">
+                            <property name="minimum">
+                             <number>2</number>
+                            </property>
+                            <property name="maximum">
+                             <number>1000</number>
+                            </property>
+                            <property name="singleStep">
+                             <number>5</number>
+                            </property>
+                            <property name="value">
+                             <number>20</number>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="2" column="1">
+                           <widget class="QSpinBox" name="spinBox_n_iter_linking">
+                            <property name="minimum">
+                             <number>100</number>
+                            </property>
+                            <property name="maximum">
+                             <number>1000000</number>
+                            </property>
+                            <property name="singleStep">
+                             <number>500</number>
+                            </property>
+                            <property name="value">
+                             <number>10000</number>
+                            </property>
+                           </widget>
+                          </item>
                           <item row="1" column="0">
                            <widget class="QLabel" name="label_36">
                             <property name="text">
                              <string>shifts:</string>
+                            </property>
+                            <property name="alignment">
+                             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="6" column="0">
+                           <widget class="QPushButton" name="pushButton_skip_sample">
+                            <property name="styleSheet">
+                             <string notr="true">background-color: rgb(208, 188, 249);</string>
+                            </property>
+                            <property name="text">
+                             <string>skip</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="3" column="0">
+                           <widget class="QLabel" name="label_38">
+                            <property name="text">
+                             <string>lim shift:</string>
                             </property>
                             <property name="alignment">
                              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -3602,17 +3733,7 @@ selection-color: rgb(85, 0, 0);</string>
                             </property>
                            </widget>
                           </item>
-                          <item row="5" column="1">
-                           <widget class="QPushButton" name="pushButton_remove_linking">
-                            <property name="styleSheet">
-                             <string notr="true">background-color: rgb(255, 185, 185);</string>
-                            </property>
-                            <property name="text">
-                             <string>remove</string>
-                            </property>
-                           </widget>
-                          </item>
-                          <item row="6" column="1">
+                          <item row="7" column="0">
                            <widget class="QPushButton" name="pushButton_use_linking">
                             <property name="styleSheet">
                              <string notr="true">background-color: rgb(255, 255, 222);</string>
@@ -3622,121 +3743,10 @@ selection-color: rgb(85, 0, 0);</string>
                             </property>
                            </widget>
                           </item>
-                          <item row="0" column="0">
-                           <widget class="QLabel" name="label_35">
-                            <property name="layoutDirection">
-                             <enum>Qt::LeftToRight</enum>
-                            </property>
-                            <property name="autoFillBackground">
-                             <bool>false</bool>
-                            </property>
+                          <item row="9" column="1">
+                           <widget class="QPushButton" name="pushButton_test_linking">
                             <property name="text">
-                             <string>algorithm:</string>
-                            </property>
-                            <property name="alignment">
-                             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-                            </property>
-                           </widget>
-                          </item>
-                          <item row="1" column="1">
-                           <widget class="QComboBox" name="comboBox_shift_method">
-                            <item>
-                             <property name="text">
-                              <string>sum</string>
-                             </property>
-                            </item>
-                            <item>
-                             <property name="text">
-                              <string>mean</string>
-                             </property>
-                            </item>
-                            <item>
-                             <property name="text">
-                              <string>median</string>
-                             </property>
-                            </item>
-                           </widget>
-                          </item>
-                          <item row="3" column="0">
-                           <widget class="QLabel" name="label_38">
-                            <property name="text">
-                             <string>lim shift:</string>
-                            </property>
-                            <property name="alignment">
-                             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-                            </property>
-                           </widget>
-                          </item>
-                          <item row="4" column="0">
-                           <widget class="QLabel" name="label_39">
-                            <property name="text">
-                             <string>bin:</string>
-                            </property>
-                            <property name="alignment">
-                             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-                            </property>
-                           </widget>
-                          </item>
-                          <item row="2" column="0">
-                           <widget class="QLabel" name="label_37">
-                            <property name="text">
-                             <string>N iter:</string>
-                            </property>
-                            <property name="alignment">
-                             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-                            </property>
-                           </widget>
-                          </item>
-                          <item row="4" column="1">
-                           <widget class="QSpinBox" name="spinBox_linking_bin">
-                            <property name="minimum">
-                             <number>2</number>
-                            </property>
-                            <property name="maximum">
-                             <number>1000</number>
-                            </property>
-                            <property name="singleStep">
-                             <number>5</number>
-                            </property>
-                            <property name="value">
-                             <number>20</number>
-                            </property>
-                           </widget>
-                          </item>
-                          <item row="7" column="1">
-                           <widget class="QPushButton" name="pushButton_calc_linking">
-                            <property name="styleSheet">
-                             <string notr="true">background-color: rgb(255, 190, 111);</string>
-                            </property>
-                            <property name="text">
-                             <string>calc</string>
-                            </property>
-                           </widget>
-                          </item>
-                          <item row="8" column="0">
-                           <widget class="QPushButton" name="pushButton_samples_linking">
-                            <property name="styleSheet">
-                             <string notr="true">background-color: rgb(191, 255, 191);</string>
-                            </property>
-                            <property name="text">
-                             <string>samples</string>
-                            </property>
-                           </widget>
-                          </item>
-                          <item row="5" column="0">
-                           <widget class="QPushButton" name="pushButton_add_trying">
-                            <property name="styleSheet">
-                             <string notr="true">background-color: rgb(191, 255, 191);</string>
-                            </property>
-                            <property name="text">
-                             <string>add trying</string>
-                            </property>
-                           </widget>
-                          </item>
-                          <item row="7" column="0">
-                           <widget class="QPushButton" name="pushButton">
-                            <property name="text">
-                             <string/>
+                             <string>test</string>
                             </property>
                            </widget>
                           </item>
